<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/topShape"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/header"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <!-- Title/Description -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:id="@+id/institution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/government_office"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/systemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_booking_system"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Hamburger icon -->
    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/menu"
        android:src="@drawable/hamburger_menu_white_34"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>
