<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/topShape"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/header"
        android:scaleType="centerCrop"
        android:src="@drawable/top_wave_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/institution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-150dp"
        android:text="@string/government_office"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topShape"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/formBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/topShape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:drawableLeft="@drawable/login_green_32"
            android:drawablePadding="12dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_marginBottom="32dp"
            tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email_grey_20"
            android:drawablePadding="8dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dimGray" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock_grey_20"
            android:drawablePadding="8dp"
            android:layout_marginBottom="24dp"
            android:minHeight="48dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dimGray" />

        <GridLayout
            android:id="@+id/btnGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:useDefaultMargins="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/login_white_20"
                android:drawablePadding="8dp"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="@android:color/white"
                tools:ignore="DuplicateSpeakableTextCheck,RtlHardcoded,UsingOnClickInXml" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="mainView"
                android:textAllCaps="false"
                android:backgroundTint="@color/dimGray"
                android:drawableLeft="@drawable/cancel_white_20"
                android:drawablePadding="8dp"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded,UsingOnClickInXml" />
        </GridLayout>

        <TextView
            android:id="@+id/registerContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/no_account"
            android:textSize="14sp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:drawableLeft="@drawable/register__white_20"
            android:drawablePadding="8dp"
            android:onClick="registerView"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            tools:ignore="RtlHardcoded,UsingOnClickInXml" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>