<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/appointment"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/officeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/office"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/serviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/service"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/officeText"
        app:layout_constraintTop_toBottomOf="parent" />


    <LinearLayout
        android:id="@+id/formSecondBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/serviceText">

        <GridLayout
            android:id="@+id/timeTableGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="5"
            android:rowCount="11"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp" />

        <GridLayout
            android:id="@+id/btnGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:useDefaultMargins="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/cloud_upload_white_20"
                android:onClick="confirmSave"
                android:text="@string/save"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded,UsingOnClickInXml" />

            <Button
                android:id="@+id/preventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/arrow_circle_left_white_20"
                android:onClick="goBack"
                android:text="@string/back"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded,UsingOnClickInXml" />

        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
